--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,8 @@
-alabaster==0.7.6
-args==0.1.0
-Babel==2.0
-backports.ssl-match-hostname==3.4.0.2
-boto==2.38.0
-Bottleneck==1.0.0
-certifi==2015.4.28
-clint==0.4.1
-coverage==3.7.1
-csvkit==0.9.1
-dbf==0.94.3
-docutils==0.12
-ecdsa==0.13
-enum34==1.0.4
-Fabric==1.10.2
-Flask==0.10.1
-Frozen-Flask==0.11
-funcsigs==0.4
-functools32==3.2.3.post2
-GDAL==1.11.3
-gnureadline==6.3.3
-google-api-python-client==1.3.1
-httplib2==0.9.1
-ipython==3.2.1
-itsdangerous==0.24
-jdcal==1.0
-Jinja2==2.7.3
-jsonschema==2.5.1
-keyring==5.3
-Markdown==2.4.1
-MarkupSafe==0.23
-matplotlib==1.4.3
-mercurial==3.5
-mistune==0.7
-mock==1.3.0
-MySQL-python==1.2.5
-nose==1.3.7
-numexpr==2.4.3
-numpy==1.10.1
-oauth2client==1.4.12
-openpyxl==2.2.0b1
-pandas==0.16.2
-paramiko==1.15.2
-patsy==0.4.0
-pbr==1.8.1
-ptyprocess==0.5
-pyasn1==0.1.8
-pyasn1-modules==0.0.7
-pycrypto==2.6.1
-Pygments==2.0.2
-pyparsing==2.0.3
-python-dateutil==2.2
-pytz==2015.4
-PyYAML==3.11
-pyzmq==14.7.0
-readline==6.2.4.1
-requests==2.3.0
-rsa==3.2
-scipy==0.16.0
-sh==1.9
-simplejson==3.8.0
+appdirs==1.4.0
+Django==1.10.5
+django-grappelli==2.9.1
+django-taggit==0.22.0
+packaging==16.8
+pyparsing==2.1.10
+pytz==2016.10
 six==1.10.0
-snowballstemmer==1.2.0
-Sphinx==1.3.1
-sphinx-rtd-theme==0.1.8
-SQLAlchemy==1.0.8
-statsmodels==0.6.1
-stevedore==1.10.0
-swampy==2.1.7
-tarbell==1.0.3
-terminado==0.5
-tornado==4.2.1
-uritemplate==0.6
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
-Werkzeug==0.10.4
-xlrd==0.9.3
